--- a/cog.yaml
+++ b/cog.yaml
@@ -29,7 +29,7 @@ build:
 
   # commands run after the environment is setup
   run:
-    - mkdir -p /src/checkpoints/ && wget --output-document "/src/checkpoints/wav2lip_gan.pth" "https://iiitaphyd-my.sharepoint.com/personal/radrabha_m_research_iiit_ac_in/_layouts/15/download.aspx?share=EdjI7bZlgApMqsVoEUUXpLsBxqXbn5z8VTmoxp55YNDcIA"
+    - mkdir -p /src/checkpoints/ && wget -O /src/checkpoints/wav2lip_gan.pth 'https://iiitaphyd-my.sharepoint.com/personal/radrabha_m_research_iiit_ac_in/_layouts/15/download.aspx?share=EdjI7bZlgApMqsVoEUUXpLsBxqXbn5z8VTmoxp55YNDcIA'
     - pip install git+https://github.com/elliottzheng/batch-face.git@master
     - echo "Environment is ready!"
 
